Fix C initial version

--- a/vic20-32k.cfg
+++ b/vic20-32k.cfg
@@ -9,7 +9,7 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002, size = $001A;
     LOADADDR: file = %O,               start = $11FF, size = $0002;
     HEADER:   file = %O,               start = $1201, size = $000C;
-    MAIN:     file = %O, define = yes, start = $120D, size = $1DF3 - __STACKSIZE__;
+    MAIN:     file = %O, define = yes, start = $120D, size = $1BF3 - __STACKSIZE__;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
