--- a/vic20-unexpanded.cfg
+++ b/vic20-unexpanded.cfg
@@ -7,7 +7,7 @@ MEMORY {
     ZP:       file = "", define = yes, start = $0002, size = $001A;
     LOADADDR: file = %O,               start = $0FFF, size = $0002;
     HEADER:   file = %O,               start = $1001, size = $000C;
-    MAIN:     file = %O, define = yes, start = $100D, size = $0DF3 - __STACKSIZE__;
+    MAIN:     file = %O, define = yes, start = $100D, size = $0BF3 - __STACKSIZE__;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
