--- a/vic20-3k.cfg
+++ b/vic20-3k.cfg
@@ -3,15 +3,13 @@
 SYMBOLS {
     __LOADADDR__:  type = import;
     __EXEHDR__:    type = import;
-    __STACKSIZE__: type = weak, value = $0001; # 1k stack
+    __STACKSIZE__: type = weak, value = $0020; # 32bytes stack
 }
 MEMORY {
     ZP:       file = "", define = yes, start = $0002, size = $001A;
     LOADADDR: file = %O,               start = $03FF, size = $0002;
     HEADER:   file = %O,               start = $0401, size = $000C;
-    MAIN:     file = %O, define = yes, start = $040D, size = $1C00 - $40D - __STACKSIZE__, fill=yes;
-	DUMMY:    file = %O,               start = $1C00 - __STACKSIZE__ - 1, size = __STACKSIZE__, fill = yes;	
-    CHARMEM:  file = %O, define = yes, start = $1C00, size = $0200, type = rw,  fill = yes;
+    MAIN:     file = %O, define = yes, start = $040D, size = $1C00 - $40D - __STACKSIZE__;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
