--- a/vic20-unexpanded.cfg
+++ b/vic20-unexpanded.cfg
@@ -3,7 +3,7 @@
 SYMBOLS {
     __LOADADDR__:  type = import;
     __EXEHDR__:    type = import;
-    __STACKSIZE__: type = weak, value = $0020; # 1k stack
+    __STACKSIZE__: type = weak, value = $0020; # 32bytes stack
 }
 MEMORY {
     ZP:       file = "", define = yes, start = $0002, size = $001A;
